--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<header>Zoom test junaid</header>
 <div id="openseadragon1" style="width: 800px; height: 600px;"></div>
 <script src="/openseadragon/openseadragon.min.js"></script>
 <script type="text/javascript">
