--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <header>Zoom test junaid</header>
 <div id="openseadragon1" style="width: 800px; height: 600px;"></div>
-<script src="/openseadragon/openseadragon.min.js"></script>
+<script src="openseadragon/openseadragon.min.js"></script>
 <script type="text/javascript">
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "/openseadragon/images/",
-        tileSources: "/path/to/my/image.dzi"
+        prefixUrl: "openseadragon/images/",
+        tileSources: "path/to/my/image.dzi"
     });
 </script>
