--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     var viewer = OpenSeadragon({
         id: "openseadragon1",
         prefixUrl: "openseadragon/images/",
-        tileSources: "path/to/my/image.dzi"
+        tileSources: "ad156ec8-3738-4395-8896-d15cf2992b87.dzi"
     });
 </script>
